feat: integrate private GitHub and GitLab release pipelines
